# CookCookhNya-frontend

./: .clang-format  .clang-tidy  .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  Testing.md  a.py  conanfile.txt  pre-commit
.github/actions/build_deps/: action.yml
.github/workflows/: ci.yml
include/: utils.hpp
src/: backSimulation.hpp  extern.cpp  extern.hpp  handlers.hpp  handlersd.hpp  main.cpp  message_tracker.cpp  message_tracker.hpp  patched_bot.cpp  patched_bot.hpp  render.hpp  states.cpp  states.hpp  tg_types.hpp  types.hpp  utils.cpp  utils.hpp
src/backend/: CMakeLists.txt  id_types.hpp
src/backend/api/: api.hpp  base.cpp  base.hpp  common.hpp  ingredients.cpp  ingredients.hpp  moderation.cpp  moderation.hpp  publicity_filter.cpp  publicity_filter.hpp  recipes.cpp  recipes.hpp  request_history.cpp  request_history.hpp  shopping_lists.cpp  shopping_lists.hpp  storages.cpp  storages.hpp  users.cpp  users.hpp
src/backend/models/: ingredient.cpp  ingredient.hpp  moderation.cpp  moderation.hpp  publication_request_status.cpp  publication_request_status.hpp  recipe.cpp  recipe.hpp  request_history.cpp  request_history.hpp  shopping_list.cpp  shopping_list.hpp  storage.cpp  storage.hpp  user.cpp  user.hpp
src/handlers/: CMakeLists.txt  common.hpp  handlersList.hpp  handlers_list.hpp  typeRefs.hpp  type_refs.hpp
src/handlers/commands/: my_storages.cpp  my_storages.hpp  personal_account.cpp  personal_account.hpp  shopping_list.cpp  shopping_list.hpp  start.cpp  start.hpp  wanna_eat.cpp  wanna_eat.hpp
src/handlers/cooking/: ingredients_spending.cpp  ingredients_spending.hpp
src/handlers/cooking_planning/: add_storage.cpp  add_storage.hpp  view.cpp  view.hpp
src/handlers/custom_recipes_list/: create.cpp  view.cpp  view.hpp
src/handlers/initial/: initialStart.cpp  initialStart.hpp  initial_start.cpp  initial_start.hpp  start.cpp  start.hpp
src/handlers/main_menu/: main_menu_view.cpp  view.cpp  view.hpp
src/handlers/personal_account/: publication_history.cpp  publication_history.hpp  request_history.cpp  request_history.hpp  view.cpp  view.hpp
src/handlers/recipe/: add_storage.cpp  add_storage.hpp  view.cpp  view.hpp
src/handlers/recipe_suggestion/: storages_select.cpp  storages_select.hpp
src/handlers/recipes_search/: view.cpp  view.hpp
src/handlers/recipes_suggestion/: recipe_view.cpp  recipes_suggestion_list.cpp  recipes_suggestion_list.hpp  shopping_list_creation.cpp  storages_select.cpp  storages_select.hpp  suggest.cpp  view.cpp
src/handlers/recipes_suggestions/: view.cpp  view.hpp
src/handlers/shopping_list/: create.cpp  create.hpp  list.cpp  list.hpp  search.cpp  search.hpp  shopping_list_creation.cpp  shopping_list_creation.hpp  storage_selection_to_buy.cpp  storage_selection_to_buy.hpp  view.cpp  view.hpp
src/handlers/storage/: delete.cpp  delete.hpp  view.cpp  view.hpp
src/handlers/storageList/: storageListCreate.cpp  storageListCreate.hpp  storageListDelete.cpp  storageListDelete.hpp  storageListView.cpp  storageListView.hpp
src/handlers/storageView/: storageAddDeleteMembers.cpp  storageAddDeleteMembers.hpp  storageView.cpp  storageView.hpp  storageViewMembers.cpp  storageViewMembers.hpp
src/handlers/storage_list/: create.cpp  delete.cpp  storage_list_create.cpp  storage_list_create.hpp  storage_list_delete.cpp  storage_list_delete.hpp  storage_list_view.cpp  storage_list_view.hpp  view.cpp
src/handlers/storage_view/: storage_add_delete_members.cpp  storage_add_delete_members.hpp  storage_add_member.cpp  storage_add_member.hpp  storage_delete_member.cpp  storage_view.cpp  storage_view.hpp  storage_view_members.cpp  storage_view_members.hpp  view.cpp
src/handlers/storages_list/: create.cpp  create.hpp  delete.cpp  delete.hpp  view.cpp  view.hpp
src/handlers/storages_selection/: view.cpp  view.hpp
src/handlers/suggested_recipe/: add_storage.cpp  add_storage.hpp  view.cpp  view.hpp
src/render/: CMakeLists.txt  common.hpp  pagination.hpp  typeForRender.hpp  types_for_render.hpp
src/render/cooking/: ingredients_spending.cpp  ingredients_spending.hpp
src/render/cooking_planning/: add_storage.cpp  add_storage.hpp  view.cpp  view.hpp
src/render/custom_recipes_list/: create.cpp  create.hpp  view.cpp  view.hpp
src/render/ingredientsView/: ingredientsRender.cpp  ingredientsRender.hpp
src/render/ingredients_view/: ingredients_render.cpp  ingredients_render.hpp
src/render/main_menu/: main_menu_render.cpp  main_menu_render.hpp  view.cpp  view.hpp
src/utils/: CMakeLists.txt  fast_sorted_db.hpp  ingredients_availability.cpp  ingredients_availability.hpp  parsing.cpp  parsing.hpp  serialization.cpp  serialization.hpp  to_string.cpp  to_string.hpp  u8format.hpp  utils.cpp  utils.hpp  uuid.cpp  uuid.hpp
(+205 files in other folders)
